# pypiron

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  SECURITY.md  build.rs  mkdocs.yml  pyproject.toml
.github/: stamp-version.sh
.github/workflows/: build.yml  ci.yml  docker.yml  docs.yml
bench/: access_log_overhead.py  aws-down.sh  aws-up.sh  deploy.sh  meter.py  msync.sh  phase3.py  run-baseline.sh  s3_cas_validate.py  s3_scale_measure.py  s3_upload_during_steady.py  scale.py  seed_s3.py  server-ctl.sh  tier2.py
bench/install/: bench.py  benchlib.py  benchmark-matrix.sh  benchmark.sh  capacity.py  drive.py  freeze.py  mn_ramp.py  plot.py  report.py  rig.sh  rig2.sh  seed.py  test_capacity.py  test_mn_ramp.py  wheelhouse.py
bench/install/compose/: control-index.json  docker-compose.bandersnatch.yml  docker-compose.base.yml  docker-compose.devpi.yml  docker-compose.proxpi.yml  docker-compose.pypicloud-dynamo.yml  docker-compose.pypicloud.yml  docker-compose.pypiron-s3.yml  docker-compose.pypiron.yml  docker-compose.pypiserver.yml  nginx-bander.conf  nginx-devpi.conf  pypicloud-config-dynamo.ini  pypicloud-config.ini
bench/install/lock/: projects.toml
bench/install/lock/x86_64/: wheelhouse.all.json  wheelhouse.heavy.json  wheelhouse.lite.json
bench/install/lock/x86_64/closures/: aiohttp.txt  alembic.txt  arrow.txt  asyncpg.txt  attrs.txt  azure-storage-blob.txt  bcrypt.txt  beautifulsoup4.txt  black.txt  bokeh.txt  boto3.txt  cachetools.txt  cattrs.txt  celery.txt  certifi.txt  click.txt  coverage.txt  cryptography.txt  dask.txt  django.txt  faker.txt  fastapi.txt  flake8.txt  flask.txt  google-cloud-storage.txt  grpcio.txt  gunicorn.txt  httptools.txt  httpx.txt  hypothesis.txt  ipython.txt  isort.txt  jinja2.txt  jsonschema.txt  jupyterlab.txt  kombu.txt  loguru.txt  lxml.txt  markupsafe.txt  marshmallow.txt  (+63 more)
dev/: BENCHMARKS.md  BENCHMARK_INSTALL.md  BENCHMARK_RESULTS.md  CLEANUP_BACKLOG.md  DENYLIST.md  DESIGN.md  DOCS_STYLE.md  ROADMAP.md  SECURITY_AUDIT.md  TESTING.md
dev/landscape/: LANDSCAPE.md  README.md  compile.py  data.json  taxonomy.json
dev/landscape/products/: anaconda_org.json  artifactory.json  artipie.json  bandersnatch.json  cloudsmith.json  codeartifact.json  dumb_pypi.json  eggbasket.json  flask_pypi_proxy.json  forgejo.json  gcp_artifact_registry.json  github_packages.json  localshop.json  nexus_oss.json  packagecloud.json  piwheels.json  private_pypi.json  proxypypi.json  pulp_python.json  pypiserver.json  pywharf.json  warehouse.json
docs/: BENCHMARKS.md  BENCHMARK_INSTALL.md  BENCHMARK_RESULTS.md  CNAME  COMPATIBILITY.md  CONFIGURATION.md  DENYLIST.md  DESIGN.md  GAPS.md  ROADMAP.md  SCALE.md  SECURITY_AUDIT.md  STANDARDS.md  TESTING.md  VISION.md  index.md  spec.md  todo.md  ultra-prompt.md
docs/concepts/: artifact-delivery.md  authentication.md  download-stats.md  how-it-works.md  mirroring.md  storage.md  supply-chain.md
docs/getting-started/: first-steps.md  installation.md
docs/guides/: air-gapped-mirror.md  deploy.md  private-and-public.md  private-packages.md  production.md  setup.md
docs/landscape/: LANDSCAPE.html  exclude.json
docs/landscape/products/: azure_artifacts.json  banderx.json  buildkite_package_registries.json  bytesafe.json  chainguard_libraries_for_python.json  devpi.json  gemfury.json  gitea.json  github_hosted_pypi.json  gitlab.json  harness_artifact_registry.json  nexus_pro.json  nginx_pypi_cache.json  pep381client.json  pip2pi.json  proget.json  proxpi.json  pypi.json  pypi_insiders.json  pypicloud.json  pypiprivate.json  pypiron.json  simpleindex.json
docs/reference/: api.md  benchmarks.md  cli.md  compatibility.md  configuration.md  standards.md
docs/stylesheets/: pypiron.css
examples/mirror/: air-gapped.toml  lean-linux-ci.toml  no-pypy.toml  stable-only.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_coremeta.rs  fuzz_names.rs  fuzz_range.rs  fuzz_render.rs  fuzz_wheel.rs  fuzz_wheelzip.rs
scripts/: archive_binary.py  release_notes.py  transform_readme.py
src/: cache.rs  config.rs  config_template.toml  coremeta.rs  corpus_check.rs  counters.rs  lease.rs  main.rs  markdown.rs  metrics.rs  names.rs  origin.rs  provenance.rs  proxy.rs  range.rs  render.rs  sidecar.rs  simple.rs  status.rs  storage.rs  sync.rs  token.rs  upload.rs  verify.rs  web.rs  wheel.rs  worker.rs
test/: test_simple.sh
tests/: conftest.py  helpers.py  test_attestations.py  test_auth.py  test_caching.py  test_cli.py  test_compat_pdm.py  test_compat_pip.py  test_compat_pipenv.py  test_compat_poetry.py  test_compat_publishers.py  test_counters.py  test_crash_consistency.py  test_dirty_markers.py  test_exclude_newer.py  test_immutability.py  test_integration_disk.py  test_integration_s3.py  test_large_upload.py  test_leader.py  test_observability.py  test_origin.py  test_pep658.py  test_perf.py  test_presigned.py  test_project_status.py  test_proxy.py  test_read_auth.py  test_reconciler.py  test_redirects.py  test_release_notes.py  test_roundtrip.py  test_scale.py  test_sidecars.py  test_simple.sh  test_simple_s3.sh  test_standards.py  test_sync.py  test_sync_filters.py  test_sync_http.py  (+8 more)
