[package]
name = "pypiron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
mime = "0.3"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["macros", "formatting", "parsing", "serde", "std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
html-escape = "0.2"
async-trait = "0.1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "gzip", "brotli", "zstd", "stream"] }
