[package]
name = "pypiron"
# Permanent placeholder: real versions come from git tags (vX.Y.Z).
# CI stamps the tag version in before building wheels. See RELEASE.md.
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
mime = "0.3"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["macros", "formatting", "parsing", "serde", "std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
html-escape = "0.2"
async-trait = "0.1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "gzip", "brotli", "zstd", "stream"] }
pep440_rs = "0.7.3"
toml = "1.1.2"
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure"] }
pulldown-cmark = { version = "0.13.4", default-features = false }

# Policy as data: these apply to local `cargo clippy` and rust-analyzer, not just
# the CI `-D warnings` gate. Kept deliberately small — no clippy::pedantic.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
exit = "warn"

# Applied uniformly to every release build — wheel, Docker, and `cargo install`.
# thin LTO + a single codegen unit buy most of fat-LTO's runtime/size win at a
# fraction of the compile cost; strip here makes the [tool.maturin] strip flag
# redundant and also shrinks the (previously unstripped) Docker/CI binaries.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
