[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pypiron"
dynamic = ["version"]
description = "A fast, reliable, and scalable PyPI server"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "pypiron contributors" }
]
keywords = ["pypi", "package-server", "rust", "s3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Rust",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/brycedrennan/pypiron"
Repository = "https://github.com/brycedrennan/pypiron"
Documentation = "https://github.com/brycedrennan/pypiron#readme"
Issues = "https://github.com/brycedrennan/pypiron/issues"
Changelog = "https://github.com/brycedrennan/pypiron/releases"

[tool.maturin]
# "bin" bindings means we're packaging a Rust binary, not a Python extension
bindings = "bin"
# Strip debug symbols to reduce binary size
strip = true

[dependency-groups]
dev = [
    "maturin",
    "pytest>=7",
    "pytest-xdist>=3",
    "requests>=2.31",
    "tenacity>=8.2",
    "twine",
    "uv"
]

[tool.pytest.ini_options]
markers = [
    "stress: long-running, network-heavy tests (disabled by default)",
    "integration: integration tests that may hit the network or spawn services",
    "s3: tests that require Docker/MinIO S3 emulation",
]
testpaths = [
    "tests",
]