[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pypiron"
dynamic = ["version"]
description = "A fast, reliable, and scalable PyPI server"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Blackthorn Interstellar" }
]
keywords = ["pypi", "package-server", "rust", "s3"]
classifiers = []

[project.urls]
Homepage = "https://github.com/blackthorn-interstellar/pypiron"
Repository = "https://github.com/blackthorn-interstellar/pypiron"
Documentation = "https://pypiron.com/"
Issues = "https://github.com/blackthorn-interstellar/pypiron/issues"
Changelog = "https://github.com/blackthorn-interstellar/pypiron/releases"

[tool.maturin]
# "bin" bindings means we're packaging a Rust binary, not a Python extension
bindings = "bin"
# Strip debug symbols to reduce binary size
strip = true

[dependency-groups]
dev = [
    "maturin",
    "packaging>=25.0",
    "pytest>=7",
    "pytest-xdist>=3",
    "requests>=2.31",
    "ruff>=0.15",
    "tenacity>=8.2",
    "twine",
    "uv",
]
# User-facing docs site (mkdocs-material). Build: `make docs`; serve: `make docs-serve`.
docs = [
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
markers = [
    "stress: long-running, network-heavy tests (disabled by default)",
    "integration: integration tests that may hit the network or spawn services",
    "s3: tests that require Docker/MinIO S3 emulation",
    "azure: tests that require Docker/Azurite Azure Blob emulation",
    "perf: performance benchmarks against the release binary (disabled by default)",
    "chaos: crash-point fault injection sweeps (slow-ish, deterministic)",
    "compat(client, feature): client compatibility coverage point for docs/reference/compatibility.md",
]
addopts = "-m 'not perf and not stress'"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Deliberately minimal: pyflakes (real bugs — unused imports, undefined names)
# plus import sorting. Line length and other style are left to the formatter,
# not enforced as lint noise.
select = ["F", "I"]
